--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-  Основни стилове за каталога на видеоигрите.
-  Определят се шрифтове, цветове и оформление на таблицата, както
-  стилизиране на контролите за филтриране и търсене.
+  Basic styles for the video game catalog.
+  Defines fonts, colors, and table layout, as well as
+  styling of filter and search controls.
 */
 
 body {
